infra/k8s/dev/cart-db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart-db
  template:
    metadata:
      labels:
        app: cart-db
    spec:
      containers:
        - name: cart-db
          image: mongo
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: cart-db-service 
spec:
  selector:
    app: cart-db
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
