infra/k8s/dev/payment-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: myshop/payment
          imagePullPolicy: Never
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  selector:
    app: payment
  ports:
    - name: payment
      protocol: TCP
      port: 3000
      targetPort: 3000
