infra/k8s/dev/product-db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-db
  template:
    metadata:
      labels:
        app: product-db
    spec:
      containers:
        - name: product-db
          image: mongo
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: product-db-service  
spec:
  selector:
    app: product-db
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
