infra/k8s/dev/product-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
        - name: product
          image: myshop/product
          imagePullPolicy: Never
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  selector:
    app: product
  ports:
    - name: product
      protocol: TCP
      port: 3000
      targetPort: 3000
