infra/k8s/dev/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  labels:
      name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: my-shop-dev.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: client-service
              port:
                number: 3000
        - path: /api/auth/
          pathType: Prefix
          backend:
            service:
              name: auth-service
              port:
                number: 3000
        - path: /api/products/
          pathType: Prefix
          backend:
            service:
              name: product-service
              port:
                number: 3000
        - path: /api/cart/
          pathType: Prefix
          backend:
            service:
              name: cart-service
              port:
                number: 3000
